--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "geolib": "^3.3.4",
+    "joi": "^17.12.2",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
