--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "joi": "^17.12.2",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1",
-    "twilio": "^5.0.1"
+    "twilio": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
